--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,37 @@
 ---
+import Mainlayouts from "../layouts/Mainlayouts.astro";
+import Form from "../components/Form.astro";
+import Testimonials from "../components/Testimonials.astro";
+
+const url = "https://gmsddfniqxjjbjmjrxom.supabase.co/rest/v1/postdata?approved=is.true";
+const key = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imdtc2RkZm5pcXhqamJqbWpyeG9tIiwicm9sZSI6ImFub24iLCJpYXQiOjE2ODE3MTQ1MDgsImV4cCI6MTk5NzI5MDUwOH0.WYYt5raQ0-5NH2HE2Jxan5UdzHQCHZF4iq46TnYFciw";
+
+const response = await fetch(url,{
+	method: "GET",
+	headers: {
+		apikey: key,
+		'Accept' :'application/json',
+		'Content-Type' :'application/json'
+	},
+
+});
+const udsagn = await response.json();
+
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+
+
+<Mainlayouts title="Anmeldelser">
+<main>
+	<Form />
+	<ul>
+		{
+			udsagn.map((testimonial) => {
+				return <Testimonials name = {testimonial.name} overskrift ={testimonial.overskrift} text = {testimonial.text} />
+			})
+		}
+	</ul>
+</main>
+</Mainlayouts>
+	
+
